grid-gap-fix

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -21,14 +21,13 @@ main {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: 100px;
-    column-gap: 40px;
-    row-gap: 20px;
-    background: #cad5ca;
+    gap: 20px 40px;
+    background: #f8f0fb;
     margin-left: 20px;
 }
 
-.modules {
-    background: #f8f0fb;
+.module {
+    background: #cad5ca;
 }
 
 .module.one {
